# clrn

./: CMakeLists.txt  ProjectHome.md
branches/stable_v1/poker/neuro/: CMakeLists.txt  DatabaseReader.h
common/tools/db_compiler/: CMakeLists.txt  Compiler.h
projects/common/db/: CMakeLists.txt
projects/common/db/inc/: CppSQLite3.h  Recordset.h  SQLiteStatement.h
projects/common/db/src/: CppSQLite3.cpp  SQLiteDB.cpp  SQLiteStatement.cpp
projects/common/db/tests/: CMakeLists.txt  MongoTests.cpp  SqliteTests.cpp
projects/poker/: CMakeLists.txt
projects/poker/bugfix/: bad.txt
projects/poker/client/: CMakeLists.txt  DataSender.cpp  DataSender.h  Detours.cpp  IClient.h  ITable.h  Messages.cpp  PokerStars.h  PokerStarsClient.cpp  PokerStarsTable.cpp  PokerStarsTable.h  dllmain.cpp
projects/poker/clientlib/: ActionsParser.cpp  ActionsParser.h  CMakeLists.txt  DataSender.h  IConfig.h  ITable.h  ITableControl.h  Messages.cpp  Messages.h  PokerStarsClient.cpp  PokerStarsClient.h  PokerStarsConfig.cpp  PokerStarsTable.cpp  PokerStarsTable.h  PokerStarsTableControl.cpp
projects/poker/common/: CMakeLists.txt
projects/poker/common/inc/: Actions.h  BetSize.cpp  BetSize.h  Board.h  Cards.h  Combinations.h  CombinationsCalculator.h  Config.h  DecisionMaker.h  Evaluator.h  Hand.h  IActionsQueue.h  IDataSender.h  ITable.h  Logic.h  Modules.h  PacketActionsQueue.h  Player.h  Screenshot.h  StackSize.cpp  StackSize.h  TableActionsQueue.h  TableContext.h  TableLogic.h  WinRate.cpp
projects/poker/common/src/: BetSize.cpp  Board.cpp  CMakeLists.txt  Cards.cpp  Combinations.cpp  CombinationsCalculator.cpp  Evaluator.cpp  Hand.cpp  Logic.cpp  Player.cpp  TableActionsQueue.cpp  TableLogic.cpp
projects/poker/data/: compile.cmd  current.txt  logic.txt  mongo_queries.txt  neuro.db  neuro.sql  neuro.txt  neuro_data.sql  raise_2.txt  stat.sql  train_data_call1-2.txt  train_data_call5.txt  train_data_call6.txt  train_data_call7.txt  train_data_folds.txt  train_data_folds_raise1.txt  train_data_folds_raise_full.txt  train_data_raise1.txt  train_data_raise3.txt  train_data_raise7.txt
projects/poker/docs/: v2_plan.txt  v2_todo.txt
projects/poker/evaluator/: CMakeLists.txt  Constants.h  HandEval.cpp  HandEval.h  SevenEval.h  main.cpp
projects/poker/injector/: CMakeLists.txt  DllInjector.cpp  Injector.cpp
projects/poker/logs/: 0.txt  11.txt  12.txt  21.txt  4.txt  6.txt
projects/poker/neuro/: CMakeLists.txt  DatabaseReader.cpp  INeuroNetwork.h  NetworkTeacher.cpp  NetworkTeacher.h  NeuroNetwork.cpp  Params.cpp  Params.h
projects/poker/protocols/inc/: packet.pb.cc  packet.pb.h
projects/poker/protocols/messages/: packet.proto
projects/poker/server/: CMakeLists.txt  DecisionMaker.cpp  DecisionMaker.h  Parser.cpp  Parser.h  Server.cpp  Server.h  Statistics.cpp  Statistics.h
projects/poker/serverlib/: ActionsDetector.h  DecisionMaker.cpp  DecisionMaker.h  EVDecisionMaker.cpp  EVDecisionMaker.h  HandsDetector.cpp  HandsDetector.h  IStatistics.h  MongoStatistics.cpp  MongoStatistics.h  Parser.cpp  Parser.h  Server.cpp  SqliteStatistics.cpp  SqliteStatistics.h  Statistics.cpp  Statistics.h
projects/poker/teacher/: CMakeLists.txt  Form.cpp  Form.h  Teacher.cpp  Teacher.h  design.fbp
projects/poker/tests/: ActionsDetectorTests.cpp  BoardTests.cpp  CMakeLists.txt  ClientServerLogicTests.cpp  EvaluationTests.cpp  HandsDetectorTests.cpp  NetTests.cpp  NeuroTests.cpp  SettingsTests.cpp  TableTests.cpp  Utils.cpp  main.cpp
projects/poker/tools/: CMakeLists.txt
projects/poker/tools/dbconverter/: CMakeLists.txt  main.cpp
projects/poker/tools/logsparser/: main.cpp
trunk/projects/: CMakeLists.txt
trunk/projects/CypressGUI/: BUGS
trunk/projects/CypressGUI/CypressGUI/: ReadMe.txt
trunk/projects/CypressGUI/драйвер/: CyUSB.chm
trunk/projects/common/: CMakeLists.txt
trunk/projects/common/db/: CMakeLists.txt
trunk/projects/http/HttpServer/: .project
trunk/projects/misc/LoadDll/: LoadDll.sln
trunk/projects/misc/SiteParser/: SiteParser.sln
trunk/projects/poker/: CMakeLists.txt  build.cmd
trunk/projects/poker/bugfix/: bad.txt
trunk/projects/poker/client/: CMakeLists.txt  Detours.h  IClient.h  ITable.h  Messages.cpp  Messages.h  PokerStarsClient.h  PokerStarsTable.cpp  PokerStarsTable.h  dllmain.cpp
trunk/projects/poker/clientlib/: ActionsParser.cpp  ActionsParser.h  CMakeLists.txt  DataSender.cpp  DataSender.h  ITable.h  Messages.cpp  Messages.h  PokerStarsClient.cpp  PokerStarsConfig.cpp  PokerStarsTable.cpp  PokerStarsTable.h  PokerStarsTableControl.cpp  PokerStarsTableControl.h
trunk/projects/poker/data/: current.txt  logic.txt  mongo_queries.txt  neuro.db  neuro.txt  neuro_data.sql  stat.sql  train_data.txt  train_data_call3.txt  train_data_call4.txt  train_data_call6.txt  train_data_call7.txt  train_data_raise2.txt  train_data_raise4.txt  train_data_raise5.txt  train_data_raise6.txt
trunk/projects/poker/docs/: v2_todo.txt
trunk/projects/poker/evaluator/: FiveEval.cpp  FiveEval.h  HandEval.cpp  HandEval.h  SevenEval.cpp  SevenEval.h  main.cpp
trunk/projects/poker/injector/: CMakeLists.txt  DllInjector.cpp
trunk/projects/poker/logs/: 0.txt  11.txt  16.txt  18.txt  22.txt  3.txt
trunk/projects/poker/neuro/: DatabaseReader.cpp  INeuroNetwork.h  NetworkTeacher.cpp  NetworkTeacher.h  Params.cpp  Params.h
trunk/projects/poker/server/: CMakeLists.txt  Parser.cpp  Parser.h  Server.cpp  ServerMain.cpp
trunk/projects/poker/serverlib/: ActionsDetector.cpp  CMakeLists.txt  DecisionMaker.cpp  DecisionMaker.h  EVDecisionMaker.cpp  HandsDetector.cpp  HandsDetector.h  IStatistics.h  MongoStatistics.cpp  (+8 more)
trunk/projects/sync/: sync_vs11.sln  sync_vs9.sln
(+870 files in other folders)
